--- a/2023ECE226Note/collection/chapter4.tex
+++ b/2023ECE226Note/collection/chapter4.tex
@@ -144,7 +144,7 @@ Start with a continuous random variable $X$ with CDF $F_X(x)$. The probability o
 \end{definition}
 
 \begin{theorem}[The Expectation and Variance of $X\sim\Gaus(\mu,\sigma)$]
-    \[\E{X} = \mu, \qquad \Var(X) = \sigma^2.\]
+    \[\E{X} = \mu, \qquad \Var[X] = \sigma^2.\]
 \end{theorem}
 
 \begin{theorem}
