--- a/Formats/Format.tex
+++ b/Formats/Format.tex
@@ -55,6 +55,7 @@
 \RequirePackage{multicol} %Package to use multicols
 
 %%%% Other Packages
+\RequirePackage{xspace}
 \RequirePackage{calc}
 \RequirePackage{rotating}
 \RequirePackage{pgf, tikz}
