--- a/2023ECE226Quiz/main.tex
+++ b/2023ECE226Quiz/main.tex
@@ -38,6 +38,12 @@ NetID:\ \myrule\hfill RUID:\ \myrule\\
         }
 \end{center}
 
+\input{collection/2.3.1.tex}
+\input{collection/week2.tex}
+\input{collection/week3.tex}
+\input{collection/week6.tex}
+\input{collection/Pset6.tex}
+\input{collection/Pset7.tex}
 \input{collection/Pset8.tex}
 
 \begin{stretchbox}
