--- a/Formats/Macro.tex
+++ b/Formats/Macro.tex
@@ -75,9 +75,6 @@
 \DeclareMathOperator{\Gaus}{\mathsf{N}}
 \DeclareMathOperator{\Weibull}{\mathsf{Weibull}}
 
-
-\DeclareMathOperator{\iidsim}{\stackrel{\textnormal{i.i.d.}}{\sim}}
-
 %%%% Special norms and linear algebra stuff
 \newcommand*{\subgnorm}[1]{\norm*{#1}_{\psi_2}}
 \newcommand*{\subexpnorm}[1]{\norm*{#1}_{\psi_1}}
@@ -88,8 +85,9 @@
 %%%% Some Abbreviations
 \newcommand*{\diff}{\mathop{}\!\mathrm{d}}
 \newcommand*{\set}[1]{\braces*{\,#1\,}}
+\newcommand*{\iidsim}{\stackrel{\textnormal{i.i.d.}}{\sim}}
 
-%%%% CVPR
+%%%% CVPR ABBREVIATIONS
 % Add a period to the end of an abbreviation unless there's one already,
 % then \xspace.
 \makeatletter
