--- a/2023ECE226Lecture/Syllabus.tex
+++ b/2023ECE226Lecture/Syllabus.tex
@@ -63,9 +63,9 @@ The students will learn the fundamentals of probability that are necessary for s
         \item Exam Formats: {
             \begin{itemize}
                 \item In total 150 points in each exam. Each will convert to 50 credits in final grade.
-                \item 60 points easy questions from HW. No partial credit. Need a complete calculation process.
-                \item 40 points intermediate questions modified from HW. No partial credit. Fill the blank.
-                \item 50 points hard questions. Multiple-choice. Probability class deserves some randomness.
+                \item 80 points questions from HW. No partial credit. Need a complete calculation process.
+                \item 40 points questions modified from HW. No partial credit. Fill the blank.
+                \item 30 points challenge questions. Multiple-choice. Probability class deserves some randomness.
             \end{itemize}
         }
     \end{itemize}
@@ -88,9 +88,9 @@ The students will learn the fundamentals of probability that are necessary for s
 \textbf{Topics Covered By Day:} {
     \begin{enumerate}[\textbf{Day} 1]
         \item Course Introduction and Review of Calculus
-        \item Combinatorics Analysis, Counting Methods, Tree Diagrams
+        \item Combinatorics Analysis, Counting Methods
         \item Examples and Exercises
-        \item Set Theory, Axioms of Probability, Conditional Probability, Independence, Venn Diagrams
+        \item Set Theory, Axioms of Probability, Bayes, Independence, Venn Diagrams, Tree Diagrams
         \item Examples and Exercises
         \item PMF, Discrete Random Variables, CDF, Derived Random Variable, Expectation
         \item Examples and Exercises
@@ -100,15 +100,15 @@ The students will learn the fundamentals of probability that are necessary for s
         \item Exam 1
         \item Joint CDF, Joint Random Variables, Joint PMF, Joint PDF, Marginal PMF, Marginal PDF, Joint Expectation, Covariance, Correlation, Linear Independence
         \item Examples and Exercises
-        \item Derived Random Variables
+        \item Discrete/Continuous Functions of multiple Random Variables yielding Discrete/Continuous Outputs
         \item Examples and Exercises
-        \item Conditional Random Variables
+        \item Conditional Probability Model
         \item Examples and Exercises
-        \item Sum of Random Variables
+        \item Sum of Random Variables and Moment Generating Function
         \item Examples and Exercises
         \item Review
         \item Exam 2
-        \item Convergence and Intro to Stochastic Process
+        \item Random Vector, Convergence and Intro to Stochastic Process
         \item Bonus Presentation
     \end{enumerate}
 }
